# project_Anastasiya_Pankratova_M25-555

./: .gitignore  Makefile  README.md  demo.cast  labyrinth_demo.cast  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
